# bi_wealth

./: .gitignore  LICENSE  README.md  config.yaml  dwh_wealth_pipeline.py  gorila_pipeline.py  gorila_pipeline_cdc.py  pipeline_gorila_cdc.py  pipeline_gorila_full_load.py  pipeline_xp_cdc.py  pipeline_xp_full_load.py  pyproject.toml  requirements.txt  runner.py
data/: teste.json
data/downloads/addepar/: addepar.xlsx
data/downloads/avenue/: avenue 012025.xlsx  avenue 102024.xlsx  avenue 112024.xlsx  avenue 122024.xlsx
pipeline/: gorila_pipeline.py  gorila_pipeline_cdc.py
rascunho/: pipeline_xp_cdc.py
src/: ingestion_gorila.py  ingestion_xp.py  pipeline.py  teste.py  utils.py
src/bronze/: ingestion_gdrive.py  ingestion_gorila.py  ingestion_gorila_ativos.py  ingestion_gorila_aum_full.py  ingestion_gorila_emissor.py  ingestion_gorila_position_full.py  ingestion_gorila_retorno_full.py  ingestion_gsheets.py  ingestion_xp_aum.py  utils.py
tests/: example.py
